--- a/剪纸堆/App.config
+++ b/剪纸堆/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+  <appSettings>
+    <add key="LeftToScreenRight" value="300" />
+    <add key="TopToScreenTop" value="100" />
+  </appSettings>
 </configuration>
