--- a/剪纸堆/App.config
+++ b/剪纸堆/App.config
@@ -1,10 +1,68 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="FloatClipboard.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+      <section name="剪纸堆.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+    </sectionGroup>
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
+  </startup>
   <appSettings>
-    <add key="LeftToScreenRight" value="300" />
-    <add key="TopToScreenTop" value="100" />
+    <add key="LeftToScreenRight" value="300"/>
+    <add key="TopToScreenTop" value="100"/>
+    <add key="ClientSettingsProvider.ServiceUri" value=""/>
   </appSettings>
+  <userSettings>
+    <FloatClipboard.Properties.Settings>
+      <setting name="Left" serializeAs="String">
+        <value>300</value>
+      </setting>
+      <setting name="Top" serializeAs="String">
+        <value>100</value>
+      </setting>
+      <setting name="Opacity" serializeAs="String">
+        <value>0.5</value>
+      </setting>
+      <setting name="MaxObject" serializeAs="String">
+        <value>100</value>
+      </setting>
+      <setting name="Visiable" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="Height" serializeAs="String">
+        <value>300</value>
+      </setting>
+    </FloatClipboard.Properties.Settings>
+    <剪纸堆.Properties.Settings>
+      <setting name="Left" serializeAs="String">
+        <value>300</value>
+      </setting>
+      <setting name="Top" serializeAs="String">
+        <value>100</value>
+      </setting>
+      <setting name="Opacity" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="MaxObject" serializeAs="String">
+        <value>100</value>
+      </setting>
+      <setting name="Visiable" serializeAs="String">
+        <value>True</value>
+      </setting>
+    </剪纸堆.Properties.Settings>
+  </userSettings>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri=""/>
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400"/>
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
